simple/manifests/nwdenyfromotherns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: 
  namespace: default
  name: deny-from-other-namespaces 
spec:
  podSelector: 
    matchlabels: 
  ingress:
  - from:
    - podSelector: {}
